Bug 160842 - unable to select cell content, if cropped part of an image of a different cell "covers" the same area
Summary: unable to select cell content, if cropped part of an image of a different cel...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords:
Depends on:
Blocks: Writer-Tables Cell-Management Authors
  Show dependency treegraph
 
Reported: 2024-04-27 10:51 UTC by László Németh
Modified: 2024-06-05 12:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Other test file, where the column text covered by the image (35.09 KB, application/vnd.oasis.opendocument.text-flat-xml)
2024-06-05 09:00 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-04-27 10:51:10 UTC
Description:
Table cells with fixed row height are usable to crop images easily, with a single drag & drop, according to the requirement of the text layout, while the cell above or bottom of the cell with image is for the caption of the image. Unfortunately, it's not possible to select and edit the content of the bottom cell, if the image cropped by the fixed row height "covers" it. 

Steps to Reproduce:
1. Open the test document of Bug 160836 (https://bugs.documentfoundation.org/attachment.cgi?id=193871).
2. Click on the caption of the image.

Actual Results:
Selection of the image.

Expected Results:
Selection of the caption.


Reproducible: Always


User Profile Reset: No

Additional Info:
Note: disable checkbox "Fit to size" in Table->Size->Row height to get fixed row height.
Comment 1 Commit Notification 2024-04-28 22:17:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f3b899655018397e71300dbb32cdf4f82940a68b

tdf#160842 sw: select cell content instead of cropped part of image

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-05-13 09:57:24 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/5ad48954250b9235f4381a756445c318d2d69f6c

tdf#160842 sw: select cell content instead of cropped part of image

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2024-06-05 09:00:05 UTC
Created attachment 194549 [details]
Other test file, where the column text covered by the image

See also test document of Bug 160836 (https://bugs.documentfoundation.org/attachment.cgi?id=193871).